--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "^1.6.3",
     "expo": "~50.0.17",
-    "expo-font": "~11.10.3",
+    "expo-blur": "^13.0.2",
+    "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
@@ -29,12 +30,12 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-image": "~1.10.6"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
