--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@shopify/flash-list": "^1.6.3",
     "expo": "~50.0.17",
     "expo-blur": "^13.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
