--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
+    "expo-sharing": "^12.0.1",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
