--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "wallpaper-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint --fix '{components,constants,context,util}/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write '{app,components,constants,context,util}/*.{js,jsx,ts,tsx,json}'"
   },
   "jest": {
     "preset": "jest-expo"
@@ -39,8 +42,12 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^9.5.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "prettier": "^3.3.2",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
