--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^9.5.0",
+    "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "prettier": "^3.3.2",
