--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "^1.6.3",
+    "axios": "^1.7.2",
     "expo": "~50.0.17",
     "expo-blur": "^13.0.2",
     "expo-file-system": "^17.0.1",
     "expo-image": "~1.10.6",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-sharing": "^12.0.1",
